Se cambia título de calendario

--- a/psm-calendario.html
+++ b/psm-calendario.html
@@ -90,7 +90,7 @@
                     <!-- Branding -->
                     <div class="branding">
                         <a class="brand" href="index.html">
-                            <span><strong>MIN</strong>OVATE</span>
+                            <span><strong>PSM</strong>Ingeniería</span>
                         </a>
                         <a href="#" class="offcanvas-toggle visible-xs-inline"><i class="fa fa-bars"></i></a>
                     </div>
