--- a/psm-calendario.html
+++ b/psm-calendario.html
@@ -90,7 +90,7 @@
                     <!-- Branding -->
                     <div class="branding">
                         <a class="brand" href="index.html">
-                            <span><strong>PSM</strong>Ingeniería</span>
+                            <span><strong>PSM</strong> Ingeniería</span>
                         </a>
                         <a href="#" class="offcanvas-toggle visible-xs-inline"><i class="fa fa-bars"></i></a>
                     </div>
@@ -384,7 +384,7 @@
 
                             <a href class="dropdown-toggle" data-toggle="dropdown">
                                 <img src="assets/images/profile-photo.jpg" alt="" class="img-circle size-30x30">
-                                <span>John Douey <i class="fa fa-angle-down"></i></span>
+                                <span>Gustavo Erazo <i class="fa fa-angle-down"></i></span>
                             </a>
 
                             <ul class="dropdown-menu animated littleFadeInRight" role="menu">
@@ -1403,15 +1403,7 @@
 
 
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='https://www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
-        </script>
+
 
     </body>
 </html>
