--- a/contratos/index.html
+++ b/contratos/index.html
@@ -103,7 +103,7 @@
                                         ==================================================== -->
 									<ul id="navigation">
 										<li><a href="contratos-indicadores.html"><i class="fa fa-dashboard"></i> <span>Indicadores</span></a></li>
-										<li><a href="index.html"><i class="fa fa-list"></i> <span>Contratos</span></a></li>
+										<li class="active"><a href="index.html"><i class="fa fa-list"></i> <span>Contratos</span></a></li>
 										<!--                                        <li><a href="psm-calendario.html"><i class="fa fa-calendar-o"></i> <span>Calendario</span> <span class="label label-success">nuevos eventos</span></a></li>-->
 										<li class="pull-right"> <img src="assets/images/psm/psm-seguro-popular.png" height="53" style="margin-right:10px"></li>
 									</ul>
@@ -250,7 +250,7 @@
 												<!-- /col -->
 												<!-- col -->
 												<div class="col-md-4">
-													<p class="text-uppercase text-strong mb-10 custom-font">Pagos registrados: 5</p>
+													<p class="text-uppercase text-strong mb-10 custom-font">Pagos registrados: 5 de 8</p>
 													<ul class="list-unstyled text-default lt mb-20">
 														<div class="progress transparent-green not-rounded mb-10">
 															<div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"> Pagado: $1,276,00.00 </div>
@@ -398,7 +398,7 @@
 												<!-- /col -->
 												<!-- col -->
 												<div class="col-md-4">
-													<p class="text-uppercase text-strong mb-10 custom-font">Pagos registrados: 5</p>
+													<p class="text-uppercase text-strong mb-10 custom-font">Pagos registrados: 5 de 10</p>
 													<ul class="list-unstyled text-default lt mb-20">
 														<div class="progress transparent-green not-rounded mb-10">
 															<div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"> Pagado: $1,276,00.00 </div>
@@ -546,7 +546,7 @@
 												<!-- /col -->
 												<!-- col -->
 												<div class="col-md-4">
-													<p class="text-uppercase text-strong mb-10 custom-font">Pagos registrados: 5</p>
+													<p class="text-uppercase text-strong mb-10 custom-font">Pagos registrados: 2 de 6</p>
 													<ul class="list-unstyled text-default lt mb-20">
 														<div class="progress transparent-green not-rounded mb-10">
 															<div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"> Pagado: $1,276,00.00 </div>
@@ -694,7 +694,7 @@
 												<!-- /col -->
 												<!-- col -->
 												<div class="col-md-4">
-													<p class="text-uppercase text-strong mb-10 custom-font">Pagos registrados: 5</p>
+													<p class="text-uppercase text-strong mb-10 custom-font">Pagos registrados: 2 de 9</p>
 													<ul class="list-unstyled text-default lt mb-20">
 														<div class="progress transparent-green not-rounded mb-10">
 															<div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"> Pagado: $1,276,00.00 </div>
@@ -842,7 +842,7 @@
 												<!-- /col -->
 												<!-- col -->
 												<div class="col-md-4">
-													<p class="text-uppercase text-strong mb-10 custom-font">Pagos registrados: 5</p>
+													<p class="text-uppercase text-strong mb-10 custom-font">Pagos registrados: 8 de 19</p>
 													<ul class="list-unstyled text-default lt mb-20">
 														<div class="progress transparent-green not-rounded mb-10">
 															<div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"> Pagado: $1,276,00.00 </div>
@@ -990,7 +990,7 @@
 												<!-- /col -->
 												<!-- col -->
 												<div class="col-md-4">
-													<p class="text-uppercase text-strong mb-10 custom-font">Pagos registrados: 5</p>
+													<p class="text-uppercase text-strong mb-10 custom-font">Pagos registrados: 3 de 10</p>
 													<ul class="list-unstyled text-default lt mb-20">
 														<div class="progress transparent-green not-rounded mb-10">
 															<div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"> Pagado: $1,276,00.00 </div>
@@ -1138,7 +1138,7 @@
 												<!-- /col -->
 												<!-- col -->
 												<div class="col-md-4">
-													<p class="text-uppercase text-strong mb-10 custom-font">Pagos registrados: 5</p>
+													<p class="text-uppercase text-strong mb-10 custom-font">Pagos registrados: 9 de 19</p>
 													<ul class="list-unstyled text-default lt mb-20">
 														<div class="progress transparent-green not-rounded mb-10">
 															<div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"> Pagado: $1,276,00.00 </div>
@@ -1286,7 +1286,7 @@
 												<!-- /col -->
 												<!-- col -->
 												<div class="col-md-4">
-													<p class="text-uppercase text-strong mb-10 custom-font">Pagos registrados: 5</p>
+													<p class="text-uppercase text-strong mb-10 custom-font">Pagos registrados: 5 de 10</p>
 													<ul class="list-unstyled text-default lt mb-20">
 														<div class="progress transparent-green not-rounded mb-10">
 															<div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"> Pagado: $1,276,00.00 </div>
@@ -1444,6 +1444,9 @@
 											<div class="form-group col-sm-12">
 												<label for="exampleInputNumClin">Comentarios</label>
 												<textarea type="number" class="form-control input-sm mb-10" id="exampleInputNumClin"></textarea>
+											</div>
+											<div class="form-group col-sm-12">
+												<button class="btn btn-success btn-ef btn-ef-7 btn-ef-7b mb-10"><i class="fa fa-code"></i> Adjuntar comprobante...</button>
 											</div>
 										</div>
 										<!--
