--- a/contratos/index.html
+++ b/contratos/index.html
@@ -1446,7 +1446,7 @@
 												<textarea type="number" class="form-control input-sm mb-10" id="exampleInputNumClin"></textarea>
 											</div>
 											<div class="form-group col-sm-12">
-												<button class="btn btn-success btn-ef btn-ef-7 btn-ef-7b mb-10"><i class="fa fa-code"></i> Adjuntar comprobante...</button>
+												<button class="btn btn-success btn-ef btn-ef-7 btn-ef-7b mb-10"><i class="fa fa-file"></i> Adjuntar comprobante...</button>
 											</div>
 										</div>
 										<!--
