--- a/contratos/index.html
+++ b/contratos/index.html
@@ -1393,7 +1393,7 @@
 						<h3 class="modal-title custom-font">Registre un nuevo pago para Contrato núm: Contrato núm: SSM-LP-000/2016-01</h3> </div>
 					<div class="modal-body">
 						<p>Registre la factura:</p>
-						<form id="fileupload" action="" method="POST" enctype="multipart/form-data">
+						<form>
 							<div class="row">
 								<div class="col-lg-7">
 									<p>
