Se quita logo de seguro popular

--- a/contratos/index.html
+++ b/contratos/index.html
@@ -105,7 +105,7 @@
 										<li><a href="contratos-indicadores.html"><i class="fa fa-dashboard"></i> <span>Indicadores</span></a></li>
 										<li class="active"><a href="index.html"><i class="fa fa-list"></i> <span>Contratos</span></a></li>
 										<!--                                        <li><a href="psm-calendario.html"><i class="fa fa-calendar-o"></i> <span>Calendario</span> <span class="label label-success">nuevos eventos</span></a></li>-->
-										<li class="pull-right"> <img src="assets/images/psm/psm-seguro-popular.png" height="53" style="margin-right:10px"></li>
+<!--										<li class="pull-right"> <img src="assets/images/psm/psm-seguro-popular.png" height="53" style="margin-right:10px"></li>-->
 									</ul>
 									<!--/ NAVIGATION Content -->
 								</div>
