--- a/srs/inventario.html
+++ b/srs/inventario.html
@@ -40,7 +40,7 @@
 			</nav>
 			<h3 class="text-muted">SRS</h3> </div>
 		<div class="jumbotron">
-			<h1>Efimed N1</h1>
+			<h1>Inventario</h1>
 			<p class="lead">Es una aplicación que ayuda a llevar un control de las carteras que se asignan a los pacientes así como los servicios recibidos y encuestas.</p>
 			<p><a class="btn btn-lg btn-success" href="#" role="button">Descarga la aplicación para iPad</a></p>
 		</div>
