--- a/xmifamilia/xmifamilia/www/index.html
+++ b/xmifamilia/xmifamilia/www/index.html
@@ -8,6 +8,10 @@
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="lib/ionic-material/dist/ionic.material.min.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet">
+	<!-- Mobile web config -->
+		<link rel="manifest" href="manifest.json">
+	<meta name="mobile-web-app-capable" content="yes">
+	<link rel="icon" sizes="192x192" href="img/logo.png">
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
     <link href="css/ionic.app.css" rel="stylesheet">
     -->
@@ -16,6 +20,20 @@
     <script src="lib/ionic-material/dist/ionic.material.min.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
 <!--    <script src="cordova.js"></script>-->
+	
+	<!-- ICONS -->
+	
+<!--
+	<link href="http://www.yoursite.com/apple-touch-icon.png" rel="apple-touch-icon" />
+<link href="http://www.yoursite.com/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152" />
+<link href="http://www.yoursite.com/apple-touch-icon-167x167.png" rel="apple-touch-icon" sizes="167x167" />
+<link href="http://www.yoursite.com/apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180" />
+<link href="http://www.yoursite.com/icon-hires.png" rel="icon" sizes="192x192" />
+<link href="http://www.yoursite.com/icon-normal.png" rel="icon" sizes="128x128" />
+-->
+	
+	
+	
     <!-- your app's js -->
     <script src="js/app.js"></script>
     <script src="js/controllers/AppCtrl.js"></script>
