Mobile web metadata

--- a/xmifamilia/xmifamilia/www/index.html
+++ b/xmifamilia/xmifamilia/www/index.html
@@ -47,6 +47,9 @@
     <script src="js/controllers/PersonalInfoCtrl.js"></script>
 	
 	<meta name="mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="apple-touch-fullscreen" content="yes">
+	<meta name="apple-mobile-web-app-status-bar-style" content="default">
 		<link rel="icon" sizes="192x192" href="img/logo.png">
 </head>
 <body ng-app="starter">
