--- a/xmifamilia/xmifamilia/www/index.html
+++ b/xmifamilia/xmifamilia/www/index.html
@@ -29,6 +29,11 @@
 <link href="http://www.yoursite.com/apple-touch-icon-180x180.png" rel="apple-touch-icon" sizes="180x180" />
 <link href="http://www.yoursite.com/icon-hires.png" rel="icon" sizes="192x192" />
 <link href="http://www.yoursite.com/icon-normal.png" rel="icon" sizes="128x128" />
+
+<link rel="apple-touch-icon" href="assets/img/appicon/SRS-76.jpg">
+	<link rel="apple-touch-icon" sizes="76x76" href="assets/img/appicon/SRS-76.jpg">
+	<link rel="apple-touch-icon" sizes="120x120" href="assets/img/appicon/SRS-120.jpg">
+	<link rel="apple-touch-icon" sizes="152x152" href="assets/img/appicon/SRS-152.jpg">
 -->
 	
 	
