--- a/xmifamilia/xmifamilia/www/index.html
+++ b/xmifamilia/xmifamilia/www/index.html
@@ -40,7 +40,10 @@
 	
     <!-- your app's js -->
     <script src="js/app.js"></script>
-    <script src="js/controllers/AppCtrl.js"></script>
+    <script src="js/controllers/IntroCtrl.js"></script>
+    <script src="js/controllers/LoginCtrl.js"></script>
+    <script src="js/controllers/SubscribeCtrl.js"></script>
+    <script src="js/controllers/PaymentCtrl.js"></script>
     <script src="js/controllers/InkCtrl.js"></script>
     <script src="js/controllers/ComponentsCtrl.js"></script>
     <script src="js/controllers/ListsCtrl.js"></script>
