--- a/xmifamilia/xmifamilia/www/index.html
+++ b/xmifamilia/xmifamilia/www/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>xMiFamilia</title>
+    <title>Pro migrante</title>
 <!--    <link href="https://fonts.googleapis.com/css?family=RobotoDraft:400,500,700,400italic" rel="stylesheet">-->
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="lib/ionic-material/dist/ionic.material.min.css" rel="stylesheet" />
@@ -21,7 +21,10 @@
 <!--    <script src="cordova.js"></script>-->
 	
 	<!-- ICONS -->
-	
+	<link rel="apple-touch-icon" href="img/appicon/app-icon-76.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="img/appicon/app-icon-76.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="img/appicon/app-icon-120.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="img/appicon/app-icon-152.png">
 <!--
 	<link href="http://www.yoursite.com/apple-touch-icon.png" rel="apple-touch-icon" />
 <link href="http://www.yoursite.com/apple-touch-icon-152x152.png" rel="apple-touch-icon" sizes="152x152" />
