Noticias y editar parentezcos

--- a/xmifamilia/xmifamilia/www/index.html
+++ b/xmifamilia/xmifamilia/www/index.html
@@ -47,6 +47,8 @@
     <script src="js/controllers/LoginCtrl.js"></script>
     <script src="js/controllers/SubscribeCtrl.js"></script>
     <script src="js/controllers/PaymentCtrl.js"></script>
+    <script src="js/controllers/NewsFeedCtrl.js"></script>
+    <script src="js/controllers/ContingencyPlanCtrl.js"></script>
     <script src="js/controllers/InkCtrl.js"></script>
     <script src="js/controllers/ComponentsCtrl.js"></script>
     <script src="js/controllers/ListsCtrl.js"></script>
