--- a/xmifamilia/web/index.html
+++ b/xmifamilia/web/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8" />
-	<title>Materil | Angular Material Design Admin Template</title>
+	<title>Pro migrante</title>
 	<meta name="description" content="app, web app, responsive, responsive layout, admin, admin panel, admin dashboard, flat, flat ui, ui kit, AngularJS, ui route, charts, widgets, components" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<link rel="stylesheet" href="../libs/assets/animate.css/animate.css" type="text/css" />
