--- a/promigrante/movil/www/index.html
+++ b/promigrante/movil/www/index.html
@@ -45,6 +45,7 @@
     <script src="js/app.js"></script>
     <script src="js/controllers/IntroCtrl.js"></script>
     <script src="js/controllers/LoginCtrl.js"></script>
+    <script src="js/controllers/ChatCtrl.js"></script>
     <script src="js/controllers/SubscribeCtrl.js"></script>
     <script src="js/controllers/PaymentCtrl.js"></script>
     <script src="js/controllers/NewsFeedCtrl.js"></script>
