Cambio de descripción

--- a/promigrante/app/index.html
+++ b/promigrante/app/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8" />
   <title>ProMigrante Back Office</title>
-  <meta name="description" content="material, material design, angular material, app, web app, responsive, responsive layout, admin, admin panel, admin dashboard, flat, flat ui, ui kit, AngularJS, ui route, charts, widgets, components" />
+  <meta name="description" content="Aplicación Back Office" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
   <link rel="stylesheet" href="../libs/assets/animate.css/animate.css" type="text/css" />
