--- a/promigrante/movil/www/index.html
+++ b/promigrante/movil/www/index.html
@@ -47,6 +47,11 @@
     <script src="js/controllers/LoginCtrl.js"></script>
     <script src="js/controllers/ChatCtrl.js"></script>
     <script src="js/controllers/SubscribeCtrl.js"></script>
+    <script src="js/controllers/EffectiveCallCtrl.js"></script>
+    <script src="js/controllers/ProtocolCtrl.js"></script>
+    <script src="js/controllers/LegalSupportCtrl.js"></script>
+    <script src="js/controllers/NoLimitCallsCtrl.js"></script>
+    <script src="js/controllers/LawyersNetworkCtrl.js"></script>
     <script src="js/controllers/PaymentCtrl.js"></script>
     <script src="js/controllers/NewsFeedCtrl.js"></script>
     <script src="js/controllers/ContingencyPlanCtrl.js"></script>
