--- a/promigrante/movil/www/index.html
+++ b/promigrante/movil/www/index.html
@@ -49,6 +49,7 @@
     <script src="js/controllers/LoginCtrl.js"></script>
     <script src="js/controllers/ChatCtrl.js"></script>
     <script src="js/controllers/SubscribeCtrl.js"></script>
+    <script src="js/controllers/SuscribeTypeCtrl.js"></script>
     <script src="js/controllers/EffectiveCallCtrl.js"></script>
     <script src="js/controllers/ProtocolCtrl.js"></script>
     <script src="js/controllers/LegalSupportCtrl.js"></script>
