Se integra el login

--- a/promigrante/movil/www/index.html
+++ b/promigrante/movil/www/index.html
@@ -19,6 +19,7 @@
     <script src="lib/ionic-material/dist/ionic.material.min.js"></script>
     <script src="lib/angular-svg-round-progressbar/roundProgress.min.js"></script>
     <script src="lib/angular-long-press/angular-long-press.js"></script>
+    <script src="lib/angular-storage/ngStorage.min.js"></script>
     <!-- cordova script (this will be a 404 during development) -->
 <!--    <script src="cordova.js"></script>-->
 	
